<resources>

    <!--Standard Strings-->
    <string name="app_name">PUHAN 葡汉</string>
    <string name="slogan">APRENDA MANDARIM</string>

    <!--Home Activity-->
    <string name="home_licoes">Lições</string>
    <string name="home_expressoes">Expressões</string>
    <string name="home_flashcards">Flashcards</string>
    <string name="home_sobre">sobre o app</string>

    <!--Lessons Activity-->
    <string name="basic_lesson">básico</string>
    <string name="intermediate_lesson">intermediário</string>
    <string name="dialog_title">Em uma galáxia muito distante&#8230;</string>
    <string name="error_fragment">&#8230;algo parece estar errado. 对不起！</string>
    <string name="try_again_button">tentar novamente</string>
    <string name="lesson_description">Lições para o seu Mandarim</string>
    <string name="lesson_description_2">ir mais longe.</string>

    <!--Pinyin Activity-->
    <string name="pinyin_title">Pinyin</string>
    <string name="whats_pinyin">O que é pinyin?</string>
    <string name="pinyin_description">Como podemos reproduzir o som de um caractere como 吗？A
        resposta é: com o pinyin. O pinyin é a romanização dos caracteres chineses baseados em sua
        pronúncia. Pinyin significa <b>som soletrado</b> e é por meio dele que podemos compreender
        os sons do Mandarim</string>
    <string name="pinyin_example_title">Exemplo</string>
    <string name="pinyin_example_caracter"><b>Caracteres:</b> 我是巴西人</string>
    <string name="pinyin_example_pinyin"><b>Pinyin:</b> wǒ shì bāxī rén</string>
    <string name="pinyin_tones">Os tons do Mandarim</string>
    <string name="pinyin_tones_description">O Mandarim é uma língua fonética em que os tons podem
        diferenciar o significado de uma mesma sílaba. O mandarim possui quatro tons principais e
        um tom neutro.</string>
    <string name="pinyin_first_tone_description"><b>Primeiro tom:</b> Alto e constante</string>
    <string name="pinyin_second_tone_description"><b>Segundo tom:</b> Cresce moderadamente</string>
    <string name="pinyin_third_tone_description"><b>Terceiro tom:</b> O tom inicialmente é baixo,
        então ele decresce, ficando ainda mais baixo e logo cresce. É um som grave em um tom baixo.</string>
    <string name="pinyin_fourth_tone_description"><b>Quarto tom:</b> Descrece rapidamente</string>
    <string name="pinyin_neutral_tone_description"><b>Tom Neutro:</b> Não possui tonalidade e é
        pronunciado rapidamente. Este tom não possui qualquer acentuação.</string>
    <string name="pinyin_chart_content_description">Mapeamento dos tons do mandarim</string>

    <!--First Lesson Activity-->
    <string name="frase_simples">Frase Simples:\nsujeito + verbo + objeto</string>
    <string name="descricao">Semelhante ao Português, em chinês, uma frase simples é constituida por</string>
    <string name="descricao_adverbio">O advérbio em chinês sempre aparece antes do verbo</string>
    <string name="frase_descricao">Sujeito + Verbo + Objeto</string>
    <string name="frase_adverbio">Advérbio + Verbo</string>
    <string name="frase_interrogativa">Frases interrogativas</string>
    <string name="frase_interrogativ_descricao">As maneiras mais comuns de se fazer um pergunta em chinês são:</string>
    <string name="forma_afirmativa">Forma afirmativa</string>
    <string name="afirmativa_primeira_frase">我说汉语</string>
    <string name="afirmativa_primeira_frase_pinyn">wŏ shuō Hànyŭ</string>
    <string name="forma_negativa">Forma negativa</string>
    <string name="negativa_primeira_frase">我不说汉语</string>
    <string name="negativa_primeira_frase_pinyn">wŏ bù shuō Hànyŭ</string>
    <string name="exemplo">Exemplos:</string>
    <string name="adverbio_primeira_frase">你是巴西人</string>
    <string name="adverbio_primeira_frase_pinyn">nĭ shì Bāxīrén</string>
    <string name="adverbio_negativa_primeira_frase">他<b>不</b>是巴西人</string>
    <string name="adverbio_primeira_frase_negativa_pinyn">wŏ <b>bù</b> shì Bāxīrén</string>
    <string name="interrogativa_primeira_frase_1">你是巴西人吗?</string>
    <string name="interrogativa_primeira_frase_1_pinyn">nĭ shì Bāxīrén ma?</string>
    <string name="interrogativa_primeira_frase_2_frase">你是不是巴西人?</string>
    <string name="interrogativa_primeira_frase_2_pinyn">nĭ shì bù shì Bāxīrén?</string>

</resources>